--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
     <div class="container">
         <h1>Welcome to VyrizPod</h1>
         <p>Your ultimate music platform, built for everyone!</p>
+
+        <!-- This is where the playlist will be displayed -->
+        <div id="playlist"></div>
     </div>
 </body>
 </html>
+
