--- a/index.html
+++ b/index.html
@@ -40,7 +40,12 @@
         <div id="playlist"></div>
     </div>
 
+    <!-- Include the Spotify Web Playback SDK -->
     <script src="https://sdk.scdn.co/spotify-player.js"></script>
+
+    <!-- Include the custom script.js file -->
+    <script src="script.js"></script>
+
     <script>
         window.onSpotifyWebPlaybackSDKReady = () => {
             const token = 'BQDv7eCUTBTSjR12drOUwKAF7W290zgfgKTNai7FtnODDO1IK0bUy01ImLWdyiGH3H5otDNZLdB81CJBfAg3JKyCHPuPReMiK42dLVEhuHfhAoMAC6ybS4UOFY2K1F-2P1_TwK_UNi9_2Kz_UTHaaG5VWrpsqgLjsqRZCpO8SybX5FjXKQGccoS07-F2ICjI2BrFKGfpoL-yyLmUwiThEqrN2g';
