--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
             background-color: #fff;
             border-radius: 10px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            max-width: 600px;
+            width: 90%;
         }
         h1 {
             color: #333;
@@ -29,6 +31,13 @@
             font-size: 18px;
             color: #666;
         }
+        .song {
+            margin: 10px 0;
+            padding: 10px;
+            background-color: #f9f9f9;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+        }
     </style>
 </head>
 <body>
@@ -36,30 +45,18 @@
         <h1>Welcome to VyrizPod</h1>
         <p>Your ultimate music platform, built for everyone!</p>
 
-        <!-- This is where the playlist will be displayed -->
+        <!-- All songs will appear here -->
         <div id="playlist"></div>
     </div>
 
-    <!-- Include the Spotify Web Playback SDK -->
     <script src="https://sdk.scdn.co/spotify-player.js"></script>
-
-    <!-- Include the custom script.js file -->
-    <script src="script.js"></script>
-
     <script>
         window.onSpotifyWebPlaybackSDKReady = () => {
-            const token = 'BQDv7eCUTBTSjR12drOUwKAF7W290zgfgKTNai7FtnODDO1IK0bUy01ImLWdyiGH3H5otDNZLdB81CJBfAg3JKyCHPuPReMiK42dLVEhuHfhAoMAC6ybS4UOFY2K1F-2P1_TwK_UNi9_2Kz_UTHaaG5VWrpsqgLjsqRZCpO8SybX5FjXKQGccoS07-F2ICjI2BrFKGfpoL-yyLmUwiThEqrN2g';
-            const player = new Spotify.Player({
-                name: 'VyrizPod Player',
-                getOAuthToken: cb => { cb(token); },
-                volume: 0.5
-            });
+            const token = 'BQDv7eCUTBTSjR12drOUwKAF7W290zgfgKTNai7FtnODDO1IK0bUy01ImLWdyiGH3H5otDNZLdB81CJBfAg3JKyCHPuPReMiK42dLVEhuHfhAoMAC6ybS4UOFY2K1F-2P1_TwK_UNi9_2Kz_UTHaaG5VWrpsqgLjsqRZCpO8SybX5FjXKQGccoS07-F2ICjI2BrFKGfpoL-yyLmUwiThEqrN2g'; // Your Spotify token
+            const playlistId = '4hA72ROeqv56jOEsM5PyV1'; // Your Spotify playlist ID
 
-            // Connect to the player
-            player.connect();
-
-            // Fetch the top artists or playlists
-            fetch('https://api.spotify.com/v1/me/top/artists', {
+            // Fetch all songs from the playlist
+            fetch(`https://api.spotify.com/v1/playlists/${playlistId}/tracks`, {
                 headers: {
                     'Authorization': `Bearer ${token}`
                 }
@@ -67,13 +64,20 @@
             .then(response => response.json())
             .then(data => {
                 const playlistDiv = document.getElementById('playlist');
-                data.items.forEach(artist => {
-                    const artistElement = document.createElement('div');
-                    artistElement.innerHTML = `<h3>${artist.name}</h3>`;
-                    playlistDiv.appendChild(artistElement);
+
+                // Loop through each track and display it
+                data.items.forEach(item => {
+                    const track = item.track;
+                    const songElement = document.createElement('div');
+                    songElement.className = 'song';
+                    songElement.innerHTML = `
+                        <strong>${track.name}</strong>
+                        <p>By ${track.artists.map(artist => artist.name).join(', ')}</p>
+                    `;
+                    playlistDiv.appendChild(songElement);
                 });
             })
-            .catch(error => console.log(error));
+            .catch(error => console.error('Error fetching playlist:', error));
         };
     </script>
 </body>
