--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VyrizPod - Music Platform</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Roboto', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
+            background-color: #2f3b52;
+            color: #fff;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -17,58 +19,99 @@
         }
         .container {
             text-align: center;
-            padding: 20px;
-            background-color: #fff;
+            padding: 30px;
+            background-color: #1e2733;
             border-radius: 10px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            max-width: 600px;
-            width: 90%;
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+            max-width: 800px;
+            width: 95%;
         }
         h1 {
-            color: #333;
+            color: #fff;
+            font-size: 36px;
+            margin-bottom: 20px;
         }
         p {
             font-size: 18px;
-            color: #666;
+            color: #ccc;
+        }
+        .playlist {
+            margin-top: 30px;
+            max-height: 400px;
+            overflow-y: auto;
+            padding: 0 15px;
         }
         .song {
-            margin: 10px 0;
-            padding: 10px;
-            background-color: #f9f9f9;
-            border: 1px solid #ddd;
+            margin: 15px 0;
+            padding: 15px;
+            background-color: #3a4751;
             border-radius: 5px;
             cursor: pointer;
+            transition: background-color 0.3s ease;
         }
         .song:hover {
-            background-color: #f1f1f1;
+            background-color: #576678;
+        }
+        .song h3 {
+            margin: 0;
+            font-size: 18px;
+            font-weight: 500;
+        }
+        .song p {
+            margin: 5px 0 0;
+            font-size: 14px;
+            color: #b5b5b5;
+        }
+        .song.playing {
+            background-color: #0b7b6e;
+        }
+        .footer {
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+            padding: 15px;
+            background-color: #1e2733;
+            text-align: center;
+            color: #b5b5b5;
+        }
+        .footer a {
+            color: #0b7b6e;
+            text-decoration: none;
+            font-weight: 500;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>Welcome to VyrizPod</h1>
-        <p>Your ultimate music platform, built for everyone!</p>
+        <h1>VyrizPod</h1>
+        <p>Your ultimate music platform. Enjoy the beats!</p>
 
-        <!-- All songs will appear here -->
-        <div id="playlist"></div>
+        <!-- Playlist container -->
+        <div class="playlist" id="playlist"></div>
     </div>
 
+    <div class="footer">
+        <p>Powered by <a href="https://developer.spotify.com" target="_blank">Spotify</a></p>
+    </div>
+
+    <!-- Spotify Player SDK -->
     <script src="https://sdk.scdn.co/spotify-player.js"></script>
     <script>
         window.onSpotifyWebPlaybackSDKReady = () => {
             const token = 'BQDv7eCUTBTSjR12drOUwKAF7W290zgfgKTNai7FtnODDO1IK0bUy01ImLWdyiGH3H5otDNZLdB81CJBfAg3JKyCHPuPReMiK42dLVEhuHfhAoMAC6ybS4UOFY2K1F-2P1_TwK_UNi9_2Kz_UTHaaG5VWrpsqgLjsqRZCpO8SybX5FjXKQGccoS07-F2ICjI2BrFKGfpoL-yyLmUwiThEqrN2g'; // Your Spotify token
             const playlistId = '4hA72ROeqv56jOEsM5PyV1'; // Your Spotify playlist ID
 
-            // Create the player
+            // Initialize the Spotify Player
             const player = new Spotify.Player({
                 name: 'VyrizPod Player',
                 getOAuthToken: cb => { cb(token); },
                 volume: 0.5
             });
 
+            // Connect the player
             player.connect();
 
-            // Fetch all songs from the playlist
+            // Fetch playlist tracks
             fetch(`https://api.spotify.com/v1/playlists/${playlistId}/tracks`, {
                 headers: {
                     'Authorization': `Bearer ${token}`
@@ -83,15 +126,20 @@
                     const track = item.track;
                     const songElement = document.createElement('div');
                     songElement.className = 'song';
-                    songElement.innerHTML = ` 
-                        <strong>${track.name}</strong> <!-- Song Name -->
-                        <p>By ${track.artists.map(artist => artist.name).join(', ')}</p> <!-- Artist Names -->
+                    songElement.innerHTML = `
+                        <h3>${track.name}</h3>
+                        <p>By ${track.artists.map(artist => artist.name).join(', ')}</p>
                     `;
 
-                    // Add an event listener for when a song is clicked
+                    // Add click event to play song
                     songElement.addEventListener('click', () => {
+                        // Highlight the song that is currently playing
+                        document.querySelectorAll('.song').forEach(song => song.classList.remove('playing'));
+                        songElement.classList.add('playing');
+
+                        // Play the song
                         player.play({
-                            uris: [track.uri] // Play the song using its URI
+                            uris: [track.uri]
                         }).then(() => {
                             console.log('Now playing: ' + track.name);
                         }).catch(error => {
