--- a/index.html
+++ b/index.html
@@ -4,81 +4,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VyrizPod - Music Platform</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
-        .container {
-            text-align: center;
-            padding: 20px;
-            background-color: #fff;
-            border-radius: 10px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            max-width: 600px;
-            width: 90%;
-        }
-        h1 {
-            color: #333;
-        }
-        p {
-            font-size: 18px;
-            color: #666;
-        }
-        .song {
-            margin: 10px 0;
-            padding: 10px;
-            background-color: #f9f9f9;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-        .song:hover {
-            background-color: #f1f1f1;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
+    <script src="https://sdk.scdn.co/spotify-player.js"></script>
 </head>
 <body>
-    <div class="container">
-        <h1>Welcome to VyrizPod</h1>
+    <header>
+        <h1>VyrizPod</h1>
         <p>Your ultimate music platform. Enjoy the beats!</p>
+    </header>
+
+    <div class="container">
+        <h2>Now Playing:</h2>
+        <p id="now-playing">Select a song to play.</p>
 
         <!-- All songs will appear here -->
         <div id="playlist"></div>
-
-        <p id="now-playing">Now Playing: Select a song to play.</p>
     </div>
 
-    <script src="https://sdk.scdn.co/spotify-player.js"></script>
+    <footer>
+        Powered by Spotify
+    </footer>
+
     <script>
         window.onSpotifyWebPlaybackSDKReady = () => {
             const token = 'BQDY2kynMgrdBSpM_rjqmDv5b5bWucyVh_rJplu5QB0lu6GoSBN29pTCxZwwDCNaoC3Zx21b6P9k9sI_h_aAEBiWbQ_luyPdZEQhRO6hxgTE5Ha14uY'; // Your Spotify access token
             const playlistId = '4hA72ROeqv56jOEsM5PyV1'; // Your Spotify playlist ID
 
+            // Initialize the Spotify Player
             const player = new Spotify.Player({
                 name: 'VyrizPod Player',
                 getOAuthToken: cb => { cb(token); },
                 volume: 0.5
             });
 
-            player.addListener('player_state_changed', state => {
-                if (!state) return;
-                const currentTrack = state.track_window.current_track;
-                document.getElementById('now-playing').innerText = `Now Playing: ${currentTrack.name} by ${currentTrack.artists.map(artist => artist.name).join(', ')}`;
-            });
-
+            // Connect the player
             player.connect();
 
+            // Fetch the playlist and display songs
             fetch(`https://api.spotify.com/v1/playlists/${playlistId}/tracks`, {
-                headers: {
-                    'Authorization': `Bearer ${token}`
-                }
+                headers: { 'Authorization': `Bearer ${token}` }
             })
             .then(response => response.json())
             .then(data => {
@@ -86,6 +50,8 @@
 
                 data.items.forEach(item => {
                     const track = item.track;
+
+                    // Create a song element
                     const songElement = document.createElement('div');
                     songElement.className = 'song';
                     songElement.innerHTML = `
@@ -93,19 +59,16 @@
                         <p>By ${track.artists.map(artist => artist.name).join(', ')}</p>
                     `;
 
+                    // Add click functionality to play the song
                     songElement.addEventListener('click', () => {
-                        player._options.getOAuthToken(accessToken => {
-                            fetch(`https://api.spotify.com/v1/me/player/play`, {
-                                method: 'PUT',
-                                headers: {
-                                    'Authorization': `Bearer ${accessToken}`,
-                                    'Content-Type': 'application/json'
-                                },
-                                body: JSON.stringify({ uris: [track.uri] })
-                            }).then(() => {
-                                console.log(`Now playing: ${track.name}`);
-                            }).catch(error => console.error('Error playing track:', error));
+                        player.activateElement().then(() => {
+                            player.setVolume(0.5);
+                            player.play({
+                                uris: [track.uri]
+                            });
                         });
+
+                        document.getElementById('now-playing').innerText = `Now Playing: ${track.name} by ${track.artists.map(artist => artist.name).join(', ')}`;
                     });
 
                     playlistDiv.appendChild(songElement);
