--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 window.onSpotifyWebPlaybackSDKReady = () => {
-    const token = 'YOUR_ACCESS_TOKEN_HERE'; // Replace with a valid token
+    const token = 'BQDY2kynMgrdBSpM_rjqmDv5b5bWucyVh_rJplu5QB0lu6GoSBN29pTCxZwwDCNaoC3Zx21b6P9k9sI_h_aAEBiWbQ_luyPdZEQhRO6hxgTE5Ha14uY'; // Replace with a valid token
     const playlistId = '4hA72ROeqv56jOEsM5PyV1'; // Your Spotify playlist ID
 
     const player = new Spotify.Player({
