--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
     <script>
         window.onSpotifyWebPlaybackSDKReady = () => {
             const token = 'BQA0WyMVfP2DcXABMWJ1AoVXveCwPjPUzQKjr0vkK3q1wRupKggk7lUnUUheYbh0wIPLnqo3Gmzk50xwGSyGVH4VKilJ9xZt9oGcsXgzYld7RY3ZMqs'; // Your provided token
-            const playlistId = '4hA72ROeqv56jOEsM5PyV1'; // Replace with your Spotify playlist ID
+            const playlistId = '<iframe src="https://open.spotify.com/embed/playlist/4hA72ROeqv56jOEsM5PyV1" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+'; // Replace with your Spotify playlist ID
 
             const player = new Spotify.Player({
                 name: 'VyrizPod Player',
