--- a/index.html
+++ b/index.html
@@ -3,62 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VyrizPod - Your Music Platform</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>VyrizPod - Your Ultimate Music Platform</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
     <header>
-        <h1>VyrizPod</h1>
+        <h1>Welcome to VyrizPod</h1>
         <p>Your ultimate music platform. Enjoy the beats!</p>
     </header>
 
     <main>
-        <div class="now-playing" id="now-playing">
+        <section>
             <h2>Now Playing:</h2>
             <p id="current-track">Select a song to play.</p>
-        </div>
 
-        <div class="playlist" id="playlist">
-            <h2>Your Playlist</h2>
-            <!-- Songs will be added here -->
-            <div class="song" data-src="songs/malang.mp3">
-                <strong>Malang</strong>
-                <p>By Artist 1</p>
+            <!-- Audio Player -->
+            <audio id="audio-player" controls>
+                Your browser does not support the audio element.
+            </audio>
+        </section>
+
+        <section>
+            <h2>Playlist:</h2>
+            <div id="playlist">
+                <!-- Song List -->
+                <div class="song" data-src="path_to_your_song1.mp3">
+                    <strong>Song Name 1</strong>
+                    <p>Artist Name 1</p>
+                </div>
+                <div class="song" data-src="path_to_your_song2.mp3">
+                    <strong>Song Name 2</strong>
+                    <p>Artist Name 2</p>
+                </div>
+                <div class="song" data-src="path_to_your_song3.mp3">
+                    <strong>Song Name 3</strong>
+                    <p>Artist Name 3</p>
+                </div>
+                <!-- Add more songs here -->
             </div>
-            <div class="song" data-src="songs/track2.mp3">
-                <strong>Song Title 2</strong>
-                <p>By Artist 2</p>
-            </div>
-            <div class="song" data-src="songs/track3.mp3">
-                <strong>Song Title 3</strong>
-                <p>By Artist 3</p>
-            </div>
-        </div>
+        </section>
     </main>
 
     <footer>
-        <p>© 2025 VyrizPod. All rights reserved.</p>
+        <p>Powered by VyrizPod</p>
     </footer>
 
-    <audio id="audio-player" controls></audio>
+    <!-- Link to the script.js -->
+    <script src="script.js"></script>
 
-    <script>
-        const audioPlayer = document.getElementById('audio-player');
-        const nowPlaying = document.getElementById('current-track');
-
-        // Add event listeners to each song
-        document.querySelectorAll('.song').forEach(song => {
-            song.addEventListener('click', () => {
-                const trackSrc = song.getAttribute('data-src');
-                const trackName = song.querySelector('strong').textContent;
-                const trackArtist = song.querySelector('p').textContent;
-
-                // Update Now Playing and Play the selected song
-                nowPlaying.textContent = `${trackName} by ${trackArtist}`;
-                audioPlayer.src = trackSrc;
-                audioPlayer.play();
-            });
-        });
-    </script>
 </body>
 </html>
