--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
             <div id="playlist">
                 <!-- Song List -->
                 <div class="song" data-src="path_to_your_song1.mp3">
-                    <strong>Song Name 1</strong>
-                    <p>Artist Name 1</p>
+                    <strong>Duvidha </strong>
+                    <p>Lucke 1</p>
                 </div>
                 <div class="song" data-src="path_to_your_song2.mp3">
                     <strong>Song Name 2</strong>
