--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <h2>Playlist:</h2>
             <div id="playlist">
                 <!-- Song List -->
-                <div class="song" data-src="path_to_your_song1.mp3">
+                <div class="song" data-src="https://github.com/pixel143try7frs/VyrizPod/blob/main/DUVIDHA%20%20Hindi%20Rap%20Song%20%20By%20LUCKE.mp3">
                     <strong>Duvidha </strong>
                     <p>Lucke 1</p>
                 </div>
