--- a/index.html
+++ b/index.html
@@ -29,17 +29,9 @@
             <h2>Playlist:</h2>
             <div id="playlist">
                 <!-- Song List -->
-                <div class="song" data-src="https://github.com/pixel143try7frs/VyrizPod/blob/main/DUVIDHA%20%20Hindi%20Rap%20Song%20%20By%20LUCKE.mp3">
-                    <strong>Duvidha </strong>
-                    <p>Lucke 1</p>
-                </div>
-                <div class="song" data-src="path_to_your_song2.mp3">
-                    <strong>Song Name 2</strong>
-                    <p>Artist Name 2</p>
-                </div>
-                <div class="song" data-src="path_to_your_song3.mp3">
-                    <strong>Song Name 3</strong>
-                    <p>Artist Name 3</p>
+                <div class="song" data-src="https://raw.githubusercontent.com/pixel143try7frs/VyrizPod/322e4bcd80fdff2cc7fd13347f66630e07cee582/DUVIDHA%20%20Hindi%20Rap%20Song%20%20By%20LUCKE.mp3">
+                    <strong>Duvidha</strong>
+                    <p>Lucke</p>
                 </div>
                 <!-- Add more songs here -->
             </div>
