--- a/index.html
+++ b/index.html
@@ -4,29 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>VyrizPod - Your Ultimate Music Platform</title>
+    <title>VyrizPod - Your Music Platform</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <header>
-        <h1>Welcome to VyrizPod</h1>
-        <p>Your ultimate music platform. Enjoy the beats!</p>
+    <header class="header">
+        <div class="header-content">
+            <h1>VyrizPod</h1>
+            <p>Your personal music player</p>
+        </div>
     </header>
 
-    <main>
-        <section>
-            <h2>Now Playing:</h2>
+    <main class="main-content">
+        <section class="now-playing">
+            <h2>Now Playing</h2>
             <p id="current-track">Select a song to play.</p>
-
             <!-- Audio Player -->
             <audio id="audio-player" controls>
                 Your browser does not support the audio element.
             </audio>
         </section>
 
-        <section>
-            <h2>Playlist:</h2>
+        <section class="playlist-section">
+            <h2>Playlist</h2>
             <div id="playlist">
                 <!-- Song List -->
                 <div class="song" data-src="https://raw.githubusercontent.com/pixel143try7frs/VyrizPod/322e4bcd80fdff2cc7fd13347f66630e07cee582/DUVIDHA%20%20Hindi%20Rap%20Song%20%20By%20LUCKE.mp3">
@@ -38,7 +39,7 @@
         </section>
     </main>
 
-    <footer>
+    <footer class="footer">
         <p>Powered by VyrizPod</p>
     </footer>
 
