--- a/index.html
+++ b/index.html
@@ -4,42 +4,54 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>VyrizPod - Your Music Platform</title>
+    <title>VyrizPod - Your Ultimate Music Platform</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <header class="header">
-        <div class="header-content">
-            <h1>VyrizPod</h1>
-            <p>Your personal music player</p>
-        </div>
+    <header>
+        <h1>Welcome to VyrizPod</h1>
+        <p>Your ultimate music platform. Enjoy the beats!</p>
     </header>
 
-    <main class="main-content">
-        <section class="now-playing">
-            <h2>Now Playing</h2>
+    <main>
+        <section>
+            <h2>Now Playing:</h2>
             <p id="current-track">Select a song to play.</p>
+
             <!-- Audio Player -->
             <audio id="audio-player" controls>
                 Your browser does not support the audio element.
             </audio>
+
+            <!-- Image of the currently playing song -->
+            <div id="song-image">
+                <!-- Image will be shown here -->
+            </div>
         </section>
 
-        <section class="playlist-section">
-            <h2>Playlist</h2>
+        <section>
+            <h2>Playlist:</h2>
             <div id="playlist">
                 <!-- Song List -->
-                <div class="song" data-src="https://raw.githubusercontent.com/pixel143try7frs/VyrizPod/322e4bcd80fdff2cc7fd13347f66630e07cee582/DUVIDHA%20%20Hindi%20Rap%20Song%20%20By%20LUCKE.mp3">
-                    <strong>Duvidha</strong>
+                <div class="song" data-src="https://raw.githubusercontent.com/pixel143try7frs/VyrizPod/322e4bcd80fdff2cc7fd13347f66630e07cee582/DUVIDHA%20%20Hindi%20Rap%20Song%20%20By%20LUCKE.mp3" data-cover="https://raw.githubusercontent.com/pixel143try7frs/VyrizPod/main/SHRI%20KRISHNA%20%26%20ARJUNA.jpg">
+                    <strong>Duvidha </strong>
                     <p>Lucke</p>
+                </div>
+                <div class="song" data-src="path_to_your_song2.mp3" data-cover="path_to_cover_image2.jpg">
+                    <strong>Song Name 2</strong>
+                    <p>Artist Name 2</p>
+                </div>
+                <div class="song" data-src="path_to_your_song3.mp3" data-cover="path_to_cover_image3.jpg">
+                    <strong>Song Name 3</strong>
+                    <p>Artist Name 3</p>
                 </div>
                 <!-- Add more songs here -->
             </div>
         </section>
     </main>
 
-    <footer class="footer">
+    <footer>
         <p>Powered by VyrizPod</p>
     </footer>
 
