--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VyrizPod - Music Player</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
 </head>
 <body>
-
     <div class="player-container">
         <!-- Album Art (Replace with your image) -->
-        <img src="https://raw.githubusercontent.com/pixel143try7frs/VyrizPod/main/SHRI%20KRISHNA%20%26%20ARJUNA.jpg" alt="Album Art" class="album-art">
+        <div class="album-art-container">
+            <img src="https://raw.githubusercontent.com/pixel143try7frs/VyrizPod/main/SHRI%20KRISHNA%20%26%20ARJUNA.jpg" alt="Album Art" class="album-art">
+        </div>
 
         <div class="song-info">
             <h2 class="song-title">Duvidha</h2>
@@ -33,6 +35,5 @@
 
     <script src="script.js"></script>
     <script src="https://kit.fontawesome.com/your-fontawesome-kit.js"></script>
-
 </body>
 </html>
