--- a/index.html
+++ b/index.html
@@ -4,19 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VyrizPod - Music Player</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="player-container">
-        <!-- Album Art (Replace with your image) -->
+    <!-- Welcome Screen -->
+    <div id="welcome-screen" class="welcome-screen">
+        <h1>Welcome to VyrizPod</h1>
+        <p>Your ultimate music experience</p>
+    </div>
+
+    <!-- Music Player -->
+    <div class="player-container" id="player-container">
         <div class="album-art-container">
-            <img src="https://raw.githubusercontent.com/pixel143try7frs/VyrizPod/main/SHRI%20KRISHNA%20%26%20ARJUNA.jpg" alt="Album Art" class="album-art">
+            <img id="album-art" src="https://via.placeholder.com/300" alt="Album Art" class="album-art">
         </div>
 
         <div class="song-info">
-            <h2 class="song-title">Duvidha</h2>
-            <p class="artist-name">Lucke</p>
+            <h2 class="song-title" id="song-title">Duvidha</h2>
+            <p class="artist-name" id="artist-name">Lucke</p>
         </div>
 
         <div class="controls">
@@ -30,10 +36,13 @@
         </div>
     </div>
 
-    <!-- Replace with your song link -->
+    <!-- Audio Player -->
     <audio id="audioPlayer" src="https://raw.githubusercontent.com/pixel143try7frs/VyrizPod/322e4bcd80fdff2cc7fd13347f66630e07cee582/DUVIDHA%20%20Hindi%20Rap%20Song%20%20By%20LUCKE.mp3"></audio>
 
-    <script src="script.js"></script>
+    <!-- Font Awesome Icons -->
     <script src="https://kit.fontawesome.com/your-fontawesome-kit.js"></script>
+
+    <!-- Custom JS -->
+    <script src="script.js"></script>
 </body>
 </html>
