--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     <!-- Music Player -->
     <div class="player-container" id="player-container">
         <div class="album-art-container">
-            <img id="album-art" src="https://via.placeholder.com/300" alt="Album Art" class="album-art">
+            <!-- Updated the image link here -->
+            <img id="album-art" src="https://raw.githubusercontent.com/pixel143try7frs/VyrizPod/main/Duvidha%20downloaded%20from%20SpotiSongDownloader.com_.jpg" alt="Album Art" class="album-art">
         </div>
 
         <div class="song-info">
