--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
     <title>VyrizPod - Music Player</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <!-- Add Font Awesome CDN for the icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
+
     <!-- Welcome Screen -->
     <div id="welcome-screen" class="welcome-screen">
         <h1>Welcome to VyrizPod</h1>
@@ -27,6 +30,7 @@
         </div>
 
         <div class="controls">
+            <!-- Updated buttons with icons -->
             <button class="control-button" id="prevBtn"><i class="fas fa-step-backward"></i></button>
             <button class="control-button" id="playBtn"><i class="fas fa-play"></i></button>
             <button class="control-button" id="nextBtn"><i class="fas fa-step-forward"></i></button>
@@ -40,7 +44,7 @@
     <!-- Audio Player -->
     <audio id="audioPlayer" src="https://raw.githubusercontent.com/pixel143try7frs/VyrizPod/322e4bcd80fdff2cc7fd13347f66630e07cee582/DUVIDHA%20%20Hindi%20Rap%20Song%20%20By%20LUCKE.mp3"></audio>
 
-    <!-- Font Awesome Icons -->
+    <!-- Font Awesome CDN for the icons -->
     <script src="https://kit.fontawesome.com/your-fontawesome-kit.js"></script>
 
     <!-- Custom JS -->
