--- a/index.html
+++ b/index.html
@@ -3,17 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VyrizPod - Your Music Player</title>
+    <title>VyrizPod - Your Ultimate Music Platform</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Welcome Screen -->
+    <div id="loading-screen" class="loading-screen">
+        <div class="spinner"></div>
+    </div>
 
-    <div class="player-container">
-        <img src="https://raw.githubusercontent.com/pixel143try7frs/VyrizPod/main/Duvidha%20downloaded%20from%20SpotiSongDownloader.com_.jpg" alt="Album Art" class="album-art" id="album-art">
+    <!-- Player Container (hidden initially) -->
+    <div id="player-container" class="player-container">
+        <img src="https://github.com/pixel143try7frs/VyrizPod/blob/main/Duvidha%20downloaded%20from%20SpotiSongDownloader.com_.jpg?raw=true" alt="Album Art" class="album-art">
 
         <div class="song-info">
-            <h2 class="song-title" id="song-title">Duvidha</h2>
-            <p class="artist-name" id="artist-name">Lucke</p>
+            <h2 class="song-title">Duvidha</h2>
+            <p class="artist-name">Lucke</p>
         </div>
 
         <div class="controls">
@@ -27,10 +32,9 @@
         </div>
     </div>
 
-    <audio id="audioPlayer" src="https://raw.githubusercontent.com/pixel143try7frs/VyrizPod/322e4bcd80fdff2cc7fd13347f66630e07cee582/DUVIDHA%20%20Hindi%20Rap%20Song%20%20By%20LUCKE.mp3"></audio>
+    <audio id="audioPlayer" src="https://github.com/pixel143try7frs/VyrizPod/blob/main/DUVIDHA%20%20Hindi%20Rap%20Song%20%20By%20LUCKE.mp3?raw=true"></audio>
 
     <script src="script.js"></script>
     <script src="https://kit.fontawesome.com/your-fontawesome-kit.js"></script>
-
 </body>
 </html>
