--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
     <!-- Music Player -->
     <div class="player-container" id="player-container">
         <div class="album-art-container">
-            <img id="https://github.com/pixel143try7frs/VyrizPod/blob/main/Duvidha%20downloaded%20from%20SpotiSongDownloader.com_.jpg" src="https://via.placeholder.com/300" alt="Album Art" class="album-art">
+            <!-- Updated Album Art -->
+            <img 
+                id="album-art" 
+                src="https://github.com/pixel143try7frs/VyrizPod/blob/main/Duvidha%20downloaded%20from%20SpotiSongDownloader.com_.jpg?raw=true" 
+                alt="Album Art" 
+                class="album-art">
         </div>
 
         <div class="song-info">
@@ -31,8 +36,8 @@
             <button class="control-button" id="nextBtn"><i class="fas fa-step-forward"></i></button>
         </div>
 
-        <div class="progress-bar">
-            <div class="progress"></div>
+        <div class="progress-bar" id="progress-bar">
+            <div class="progress" id="progress"></div>
         </div>
     </div>
 
@@ -40,7 +45,7 @@
     <audio id="audioPlayer" src="https://raw.githubusercontent.com/pixel143try7frs/VyrizPod/322e4bcd80fdff2cc7fd13347f66630e07cee582/DUVIDHA%20%20Hindi%20Rap%20Song%20%20By%20LUCKE.mp3"></audio>
 
     <!-- Font Awesome Icons -->
-    <script src="https://kit.fontawesome.com/your-fontawesome-kit.js"></script>
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 
     <!-- Custom JS -->
     <script src="script.js"></script>
